

Development Version
===================
- FEATURE: Implemented parsing of CSSCalc values. General syntax is checked but not if operators in calc are actually the right kind like DIMENSION * DIMENSION. (issue #37)
- FIXED issue #20 (Test fail CSSParser.parseUrl() error with Python 3.3)

Latest Stable Version
=====================

0.9.10 130331
    - BUGFIX: False HASH color values like ``#xyz`` were not being handled properly (thanks to Teruaki Koizumi)

    - Fixed issue #23: Tests do work properly in newer Python (>2.7.1?) version now, old versions will report error. Before this was the other way round but this makes more sense probably

    - Fixed issue #24: rgba color values did not validate properly

    - (Jason R. Coombs) Fixed issue #25: Cssutils installs "tests" package

    - Fixed issue #27: Small magnitude float values serialized incorrectly

    - Fixed issue #28: Standalone semicolons in CSSStyleDeclaration is now simply stripped and does not remove directly following property too


Archived Versions
=================

0.9.10b1 120428
    - **REGRESSION**: Valid profiles reported by validation may not be right but as these hardly say anything in the real world anyway the advancements in the following bugfixes are probably worth this. ``Profiles.validateWithProfile`` currently not working but should be hardly used anyway. As a workaround remove all profiles and add just the ones you want to use for your application

    - **BUGFIX**: Profiles have been updated. Multiple profiles can be added via ``addProfiles`` and this is preferred to adding separate profiles with ``addProfile``. Profiles do check for updated macros now so that e.g. CSS3 Colors defined in a different profile are valid for all properties defined before. This may lead to a reset of all properties and so may be an extremely expensive operation.
